# AUV25

./: LICENSE  README.md
auv25_interfaces/: CMakeLists.txt  package.xml
auv25_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
auv25_ros/auv25_ros/: amslc.py  autocmd.py  campub.py  camsub.py  config.py  gpiocontrol.py  gpioctrl.py  imu_madgwick.py  imu_q2rpy.py  imucluc.py  imuviewer.py  j2tw.py  logger.py  mpu6050.py  odom.py  pingsonner.py  pwmgen.py  pwmtest.py  serrecv.py  thctrl.py
auv25_ros/auv25_ros/msg/: SensorPacket.msg
auv25_ros/config/: config.py
auv25_ros/csv/: log_20251127_134425.csv
auv25_ros/launch/: auv25_launch.py  auv25_remotelaunch.py
auv25_ros/msg/: SensorPacket.msg
auv25_ros/teensy/main/: main.ino
msg/: SensorPacket.msg
