[develop]
script_dir=$base/lib/auv25_ros
[install]
install_scripts=$base/lib/auv25_ros
[options.entry_points]
console_scripts =
    pingsonner = auv25_ros.pingsonner:main,
    gpioctrl = auv25_ros.gpioctrl:main,
    pwmtest = auv25_ros.pwmtest:main,
    mpu6050 = auv25_ros.mpu6050:main,
    j2tw = auv25_ros.j2tw:main,
    thctrl = auv25_ros.thctrl:main,
    pwmgen = auv25_ros.pwmgen:main,